--- a/style.css
+++ b/style.css
@@ -3,23 +3,67 @@ html{
 }
 
 html, body{
-    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+.clocks{
+    position: absolute;
+    height: 300px;
+    width: 300px;
+    border-radius: 150px;
+    border: solid 3px black;
+    box-shadow: 1px 1px 22px 1px black;
+    font-family: 'Courier New', Courier, monospace;
+    background-color: white;
 }
 
 #clock{
-    display: flex;
-    justify-content: center;
-    
     width: 130px;
     height: 40px;
-    align-items: center;
-    font-size: 30px;
-
+    font-size: 40px;
+    font-weight: bold;
+    margin-top: 25rem;
+    font-family: 'Courier New', Courier, monospace;
+    margin-right: 69px;
 }
 
-.content{
+#seconds-hand{
+    position: absolute;
+    height: 130px;
+    width: 2px;
+    background-color: black;
+    right: 149px;
+    bottom: 149px;
+    opacity: 50%;
+    transform-origin: 0 100%;
+}
 
-    display: flex;
-    justify-content: center;
-    margin-top: 25rem;   
+#minutes-hand{
+height: 130px;
+width: 4px;
+background-color: black;
+position: absolute;
+right: 149px;
+bottom: 149px;
+transform-origin: 0 100%;
+}
+#hours-hand{
+    height: 80px;
+width: 4px;
+background-color: rgb(0, 0, 0);
+position: absolute;
+right: 148px;
+bottom: 148px;
+transform-origin: 0 100%;
+}
+#center{
+    height: 15px;
+    width: 15px;
+    border-radius: 10px;
+    background-color: black;
+    position: absolute;
+    left: 145px;
+    bottom: 145px;
 }
